--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,43 +36,13 @@ jobs:
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json"}}
           paths:
-          - ./node_modules
-      - run: 
-          name: audit-packages
-          command: npm audit
-      - run: 
-          name: test-run
-          command: npm run test
-      - run: 
-          name: docker-login
-          command: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-      - run: 
-          name: Build Docker Image
-          command: docker build -t $IMAGE_NAME:latest .
-      - run: 
-          name: Publish Docker Image
-          command: docker push $IMAGE_NAME
-      - run: 
-          name: set-environment-variables
-          command: echo $SERVER > server.crt && echo $PRIVATE_KEY > privatekey.pem
-      - run: 
-          name: build-docker-image-for-integration-environment
-          command: docker create -p 8443:8443 --name integration_app $IMAGE_NAME
-      - run: 
-          name: copy-server-cert-and-private-key-accross
-          command: docker cp ./privatekey.pem integration_app:/privatekey.pem; docker cp ./server.crt integration_app:/server.crt
-      - run: 
-          name: start-docker-container
-          command: docker start integration_app
-      - run: 
-          name: run-zap-scan-against-container
-          command: CONTAINER_IP=$(docker inspect integration_app --format='{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}'); docker run -t owasp/zap2docker-stable zap-baseline.py -t https://$CONTAINER_IP:8443/math/add -P 8443
+          - ./node_modules    
   deploy:
     docker:
       - image: circleci/node:10.16.3
     steps:
       - run:
           name: deploy-application
-          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "export SERVER=\"$SERVER\"; export IMAGE_NAME=\"$IMAGE_NAME\"; export PRIVATE_KEY=\"$PRIVATE_KEY\"; rm -rf ExampleApplication/; git clone https://github.com/swaroopa1986/ExampleApplication.git; source ExampleApplication/deploy.sh"          
+          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "export SERVER=\"$SERVER\"; export IMAGE_NAME=\"$IMAGE_NAME\"; export PRIVATE_KEY=\"$PRIVATE_KEY\"; rm -rf ExampleApplication/;ls; git clone https://github.com/swaroopa1986/ExampleApplication.git; source ExampleApplication/deploy.sh"          
 
           
