--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,7 @@ jobs:
     steps:
       - run:
           name: deploy-application
-          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "export SERVER=\"$SERVER\"; export IMAGE_NAME=\"$IMAGE_NAME\"; export PRIVATE_KEY=\"$PRIVATE_KEY\"; rm -rf ExampleApplication/;ls; git clone https://github.com/swaroopa1986/ExampleApplication.git; source ExampleApplication/deploy.sh"          
+          command: ssh -o StrictHostKeyChecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "rm -rf SimpleApplication/; git clone https://github.com/jayasrikusuma/SimpleApplication.git; source SimpleApplication/deploy.sh"
+# deployment successful
 
           
